# ML-Regression-Model-CPP

./: .gitignore  CMakeLists.txt  README.md  data_processing.ipynb  gitignore  model_score.ipynb
BayesianRidge/: BayesianRidge.tex  main.cpp
ElasticNet/: ElasticNet.tex  main.cpp
HuberRegressor/: HuberRegressor.tex  main.cpp
Lasso/: Lasso.tex  main.cpp
Linear Regression/: main.cpp
LinearRegression/: LinearRegression.fdb_latexmk  LinearRegression.fls  LinearRegression.tex  main.cpp
Ridge/: Ridge.tex  main.cpp
class/: model.h
utils/: Model.h  Pandas.cpp  Pandas.h  matlib.cpp  matlib.h  metrics.cpp  metrics.h  model_selection.cpp  model_selection.h  pandas.cpp  pandas.h
